<resources>
    <string name="app_name">Practica1_Pablo</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="noi">Es un noi amb el cabell negre</string>
    <string name="noia">Es una noia amb el cabell gris</string>
    <string name="gos">Es un gos blanc/gris i gran</string>

    <string name="missatgenoi">Es un noi</string>
    <string name="missatgenoia">Es una noia</string>
    <string name="missatgegos">Es un gos</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="benvingut_usuari">Benvingut Usuari</string>
    <string name="name">Name</string>
    <string name="nom">Nom:</string>
    <string name="contrase_a">Contraseña</string>
    <string name="telefon">Telefon</string>
    <string-array name="opcions_spinner">
        <item>Personal</item>
        <item>Casa</item>
        <item>Profesional</item>
    </string-array>
</resources>